fixed random textfield and installed new scrollbar

--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,10 @@
 }
 
 .MessagesContainer {
-  height: 100%
+  height: 100%;
+  width: 100%;
+  overflow-y: auto;
+  overflow-x: hidden;
 }
 
 .MessagingIcon {
